2012-01-19  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	* ConsoleHelper.cs:
	  Some documentation fixes.

2012-01-19  WOnder93  <omosnacek@gmail.com>

	* Command.cs:
	* ICommand.cs:
	* FinalCommand.cs:
	* AssemblyInfo.cs:
	* NestedCommand.cs:
	* ConsoleHelper.cs:
	  Global code reformatting.
	Updated copyright year.
	Various small fixes.
	Added some documentation.

2012-01-17  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* ConsoleHelper.cs:
	  Fixed NullReferenceException on empty command history.

2012-01-12  WOnder93  <omosnacek@gmail.com>

	* ConsoleHelper.cs:
	  Fixed the session player 'victories (role|character)...'
	  command to display correct values.

	* AssemblyInfo.cs:
	  

2012-01-03  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* ConsoleHelper.cs:
	  Added forgotten call to initialize the 'server session <id>'
	  command.

2012-01-01  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* ConsoleHelper.cs:
	  Added null checks for dangerous IGame properties.

2011-10-28  WOnder93  <omosnacek@gmail.com>

	* Bang# Console Utils.csproj:
	  Migrated to Mono/.NET 4.0
	Updated to comply with the new C# standard.

2011-10-18  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* ConsoleHelper.cs:
	  Don't uselessly print success messages.

2011-09-29  WOnder93  <omosnacek@gmail.com>

	* ConsoleHelper.cs:
	  Forgot to add a command for the new property.

	* AssemblyInfo.cs:
	  

2011-09-29  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* ConsoleHelper.cs:
	  Adapt to the changes in the interface.

2011-09-19  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* ConsoleHelper.cs:
	  Fixed a typo in the previous revision.

2011-09-19  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* ConsoleHelper.cs:
	  Fixed System.ArgumentOutOfRangeException when backspacing an
	  empty line in the
	  Bang.ConsoleUtils.ConsoleHelper.ReadPassword() method.
